Реализовал структуру 3 фрейма

--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
     <div class="frame-1">
       <div class="container text-center">
         <h1 class="text-white brand-title">DocSphere</h1>
-        <img src="/img/ui-1.jpg" class="phone-ui img-fluid d-block mx-auto" alt="...">
-        <img src="/img/i-phone-15-pro-black-titanium-portrait.png" class="phone-border img-fluid d-block mx-auto" alt="...">
+        <div class="phone-f1">
+          <img src="/img/ui-1.png" class="phone-ui img-fluid d-block mx-auto" alt="спасите-помогите css душнила">
+        </div>
 
         <div class="container info">
           <h1 class="text-white info-title">Всегда с собой.</h1>
@@ -68,45 +69,40 @@
     <div class="frame-2">
       <div class="container text-center card-view">
 
-        <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="row row-cols-1 row-cols-md-2 g-4 ">
           <div class="col">
-            <div class="card">
+            <div class="card h-100 mx-auto">
               <div class="card-body">
-                <h5 class="card-title">Заголовок карточки</h5>
-                <p class="card-text">Это более длинная карта С вспомогательным текстом ниже в качестве естественного перехода к дополнительному контенту. Этот контент немного длиннее.</p>
+                <h5 class="card-title"><span style="color: #007BFF;">AES-256.</span> Безопасность заложена в ДНК.</h5>
               </div>
+              <img src="/img/card-1.svg" class="img-fluid float-start card-1" alt="...">
             </div>
           </div>
           <div class="col">
-            <div class="card">
+            <div class="card h-100 mx-auto">
               <div class="card-body">
-                <h5 class="card-title">Заголовок карточки</h5>
-                <p class="card-text">Это более длинная карта С вспомогательным текстом ниже в качестве естественного перехода к дополнительному контенту. Этот контент немного длиннее.</p>
+                <h5 class="card-title"><span style="color: #007BFF;">Цифровая подпись.</span> Ключ к Вашей жизни.</h5>
               </div>
+              <img src="/img/card-2.svg" class="img-fluid mx-auto card-2" alt="...">
             </div>
           </div>
           <div class="col">
-            <div class="card">
+            <div class="card h-100 mx-auto">
               <div class="card-body">
-                <h5 class="card-title">Заголовок карточки</h5>
-                <p class="card-text">Это более длинная карта С вспомогательным текстом ниже в качестве естественного перехода к дополнительному контенту.</p>
+                <h5 class="card-title"><span style="color: #007BFF;">Приватность.</span> Данными владеете <br>только Вы.</h5>
               </div>
+              <img src="/img/card-3.svg" class="img-fluid card-3" alt="...">
             </div>
           </div>
           <div class="col">
-            <div class="card">
+            <div class="card h-100 mx-auto">
               <div class="card-body">
-                <h5 class="card-title">Заголовок карточки</h5>
-                <p class="card-text">Это более длинная карта С вспомогательным текстом ниже в качестве естественного перехода к дополнительному контенту. Этот контент немного длиннее.</p>
+                <h5 class="card-title"><span style="color: #007BFF;">Лицо — ваш ключ ко всему.</span> Путь так и останется.</h5>
               </div>
+              <img src="/img/card-4.svg" class="img-fluid float-end card-4" alt="...">
             </div>
           </div>
         </div>
-
-          <!-- <p>AES-256. Безопасность заложена в ДНК.</p>
-          <p>Цифровая подпись. Ключ к Вашей жизни.</p>
-          <p>Приватность. Данными владеете только Вы.</p>
-          <p>Лицо — ваш ключ ко всему. Путь так и останется.</p> -->
       </div>
     </div>
 
@@ -119,6 +115,18 @@
   </main>
 
   <footer>
+    <div class="container">
+      <div class="row row-cols-1 row-cols-md-5 g-4 ">
+        <div class="col">
+          <h3>Приложение</h3>
+        </div>
+        <div class="col">
+          <h3>Поддержка</h3>
+        </div>
+        <div class="col">
+          <h3>Социальные сети</h3>
+        </div>
+    </div>
   </footer>
 
   <!-- Bootstrap JavaScript Libraries -->
