--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="frame-2">
       <div class="container text-center card-view">
 
-        <div class="row row-cols-1 row-cols-md-2 g-4 ">
+        <div class="row row-cols-1 row-cols-md-2 g-4">
           <div class="col">
             <div class="card h-100 mx-auto">
               <div class="card-body">
@@ -97,7 +97,7 @@
           <div class="col">
             <div class="card h-100 mx-auto">
               <div class="card-body">
-                <h5 class="card-title"><span style="color: #007BFF;">Лицо — ваш ключ ко всему.</span> Путь так и останется.</h5>
+                <h5 class="card-title"><span style="color: #007BFF;">Лицо — ваш ключ ко всему.</span> Пусть так и останется.</h5>
               </div>
               <img src="/img/card-4.svg" class="img-fluid float-end card-4" alt="...">
             </div>
@@ -112,20 +112,179 @@
       </div>
     </div>
 
+    <div class="frame-4">
+      <div class="container">
+
+      </div>
+    </div>
+
+    <div class="frame-5">
+      <div class="container">
+
+      </div>
+    </div>
+
+    <div class="frame-6">
+      <div class="container">
+
+      </div>
+    </div>
+
+    <div class="frame-7">
+      <div class="container more-apps">
+        <h2 class="more-apps-title text-center">Больше приложений.</h2>
+
+        <div class="container-fluid justify-content-center row row-cols-1 row-cols-md-3 g-4 card-container-more-apps mx-auto">
+
+          <div class="card app-card h-100 mx-auto">
+            <div class="card-body text-center">
+              <h5 class="card-title text-black text-center">Разработка</h5>
+              <p class="placeholder-glow placeholder-more-apps">
+                <span class="placeholder col-4"></span>
+                <span class="placeholder col-4"></span>
+                <span class="placeholder col-3"></span>
+                <span class="placeholder col-2"></span>
+                <span class="placeholder col-3"></span>
+                <span class="placeholder col-6"></span>
+                <span class="placeholder col-6"></span>
+                <span class="placeholder col-2"></span>
+                <span class="placeholder col-2"></span>
+                <span class="placeholder col-2"></span>
+                <span class="placeholder col-2"></span>
+                <span class="placeholder col-4"></span>
+              </p>
+              <a class="btn btn-primary disabled placeholder col-6" aria-disabled="true" style="border-radius: 50px;"></a>
+            </div>
+          </div>
+
+          <div class="card app-card h-100 mx-auto">
+            <div class="card-body text-center">
+              <h5 class="card-title text-black text-center">Разработка</h5>
+              <p class="placeholder-glow placeholder-more-apps">
+                <span class="placeholder col-4"></span>
+                <span class="placeholder col-4"></span>
+                <span class="placeholder col-3"></span>
+                <span class="placeholder col-2"></span>
+                <span class="placeholder col-3"></span>
+                <span class="placeholder col-6"></span>
+                <span class="placeholder col-6"></span>
+                <span class="placeholder col-2"></span>
+                <span class="placeholder col-2"></span>
+                <span class="placeholder col-2"></span>
+                <span class="placeholder col-2"></span>
+                <span class="placeholder col-4"></span>
+              </p>
+              <a class="btn btn-primary disabled placeholder col-6" aria-disabled="true" style="border-radius: 50px;"></a>
+            </div>
+          </div>
+
+          <div class="card app-card h-100 mx-auto">
+            <div class="card-body text-center">
+              <h5 class="card-title text-black text-center">Разработка</h5>
+              <p class="placeholder-glow placeholder-more-apps">
+                <span class="placeholder col-4"></span>
+                <span class="placeholder col-4"></span>
+                <span class="placeholder col-3"></span>
+                <span class="placeholder col-2"></span>
+                <span class="placeholder col-3"></span>
+                <span class="placeholder col-6"></span>
+                <span class="placeholder col-6"></span>
+                <span class="placeholder col-2"></span>
+                <span class="placeholder col-2"></span>
+                <span class="placeholder col-2"></span>
+                <span class="placeholder col-2"></span>
+                <span class="placeholder col-4"></span>
+              </p>
+              <a class="btn btn-primary disabled placeholder col-6" aria-disabled="true" style="border-radius: 50px;"></a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="frame-8">
+      <div class="container">
+
+      </div>
+    </div>
+
   </main>
 
   <footer>
-    <div class="container">
+    <div class="container bottom-line">
       <div class="row row-cols-1 row-cols-md-5 g-4 ">
         <div class="col">
-          <h3>Приложение</h3>
+          <h3 class="ftr-jmp-list-h">Приложение</h3>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">Главная</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Обзор</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Безопасность</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Политика конфиденциальности</a>
+            </li>
+          </ul>
         </div>
         <div class="col">
-          <h3>Поддержка</h3>
+          <h3 class="ftr-jmp-list-h">Поддержка</h3>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">Часто задаваемые вопросы</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Руководство</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Сообщить о проблеме</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Продам стринги ношеные</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Программа бета-тестирования</a>
+            </li>
+          </ul>
         </div>
         <div class="col">
-          <h3>Социальные сети</h3>
+          <h3 class="ftr-jmp-list-h">Социальные сети</h3>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">Telegram</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">ВКонтакте</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Instagram</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Twitter</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Facebook</a>
+            </li>
+          </ul>
         </div>
+      </div>
+    </div>
+    <div class="container copyright-block">
+      <p class="copyright">Copyright © 2023 MyDoc. All rights reserved.</p>
+      <div class=" copyright">
+        <a class="nav-link copyright copyright-eula copyright-eula-first" href="#">Условия использования</a>
+        <p class="nav-link copyright copyright-eula copyright-eula-first br-c-p">•</p>
+        <a class="nav-link copyright copyright-eula copyright-eula-first" href="#">Политика конфиденциальности</a>
+        <p class="nav-link copyright copyright-eula copyright-eula-first br-c-p">•</p>
+        <a class="nav-link copyright copyright-eula copyright-eula-first reg-selector icon-link icon-link-hover" href="#">
+          Россия
+          <svg class="bi" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
+        </a>
+      </div>
     </div>
   </footer>
 
