--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Обзор</a>
+              <a class="nav-link" href="#f1">Обзор</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Безопасность</a>
+              <a class="nav-link" href="#f2">Безопасность</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Загрузить</a>
+              <a class="nav-link disabled" href="#">Загрузить</a>
             </li>
           </ul>
         </div>
@@ -51,7 +51,7 @@
 
     <div class="bg-header"></div>
 
-    <div class="frame-1">
+    <div class="frame-1" id="f1">
       <div class="container text-center">
         <h1 class="text-white brand-title">DocSphere</h1>
         <div class="phone-f1">
@@ -61,12 +61,12 @@
         <div class="container info">
           <h1 class="text-white info-title">Всегда с собой.</h1>
           <p class="text-white fs-3 info-paragraph">DocSphere заменяет личный сейф более удобным, безопасным и защищенным хранилищем. Используйте его онлайн, в приложениях и письмах. Это простой способ обезопасить чувствительную информацию.</p>
-          <button class="black-btn">Загрузить</button>
+          <button class="btn btn-primary black-btn">Загрузить</button>
         </div>
       </div>
     </div>
 
-    <div class="frame-2">
+    <div class="frame-2" id="f2">
       <div class="container text-center card-view">
 
         <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -99,38 +99,62 @@
               <div class="card-body">
                 <h5 class="card-title"><span style="color: #007BFF;">Лицо — ваш ключ ко всему.</span> Пусть так и останется.</h5>
               </div>
-              <img src="/img/card-4.svg" class="img-fluid float-end card-4" alt="...">
+              <img src="/img/card-4.svg" class="img-fluid card-4" alt="...">
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="frame-3">
+    <div class="frame-3" id="f3">
+      <div class="container functionality">
+
+      </div>
+    </div>
+
+    <div class="frame-4" id="f4">
       <div class="container">
 
       </div>
     </div>
 
-    <div class="frame-4">
+    <div class="frame-5" id="f5">
       <div class="container">
 
       </div>
     </div>
 
-    <div class="frame-5">
-      <div class="container">
+    <div class="frame-6" id="f6">
+      <div class="container-fluid supported-platforms-bg">
+        <div class="container supported-platforms">
 
+          <div class="box-sup-platf-tile">
+            <div class="color-box-sup-platf-tile">
+              <p class="text-white-c sup-platf-title">DocSphere доступен на этих системах.</p>
+            </div>
+          </div>
+
+          <div class="box-sup-platf-tile box-sup-platf-p">
+            <div class="color-box-sup-platf-tile">
+              <p class="text-white-c sup-platf-p">
+                Windows<br>
+                macOS<br>
+                Linux<br>
+                Chrome OS<br>
+                iOS<br>
+                Android<br>
+                watchOS<br>
+                Android Wear<br>
+                xrOS<br>
+                </p>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
 
-    <div class="frame-6">
-      <div class="container">
-
-      </div>
-    </div>
-
-    <div class="frame-7">
+    <div class="frame-7" id="f7">
       <div class="container more-apps">
         <h2 class="more-apps-title text-center">Больше приложений.</h2>
 
@@ -138,64 +162,64 @@
 
           <div class="card app-card h-100 mx-auto">
             <div class="card-body text-center">
-              <h5 class="card-title text-black text-center">Разработка</h5>
+              <h5 class="card-title text-black text-center">В разработке</h5>
               <p class="placeholder-glow placeholder-more-apps">
-                <span class="placeholder col-4"></span>
-                <span class="placeholder col-4"></span>
-                <span class="placeholder col-3"></span>
-                <span class="placeholder col-2"></span>
-                <span class="placeholder col-3"></span>
-                <span class="placeholder col-6"></span>
-                <span class="placeholder col-6"></span>
-                <span class="placeholder col-2"></span>
-                <span class="placeholder col-2"></span>
-                <span class="placeholder col-2"></span>
-                <span class="placeholder col-2"></span>
-                <span class="placeholder col-4"></span>
+                <span class="placeholder col-4 in-dev-placeholder"></span>
+                <span class="placeholder col-4 in-dev-placeholder"></span>
+                <span class="placeholder col-3 in-dev-placeholder"></span>
+                <span class="placeholder col-2 in-dev-placeholder"></span>
+                <span class="placeholder col-3 in-dev-placeholder"></span>
+                <span class="placeholder col-6 in-dev-placeholder"></span>
+                <span class="placeholder col-6 in-dev-placeholder"></span>
+                <span class="placeholder col-2 in-dev-placeholder"></span>
+                <span class="placeholder col-2 in-dev-placeholder"></span>
+                <span class="placeholder col-2 in-dev-placeholder"></span>
+                <span class="placeholder col-2 in-dev-placeholder"></span>
+                <span class="placeholder col-4 in-dev-placeholder"></span>
               </p>
-              <a class="btn btn-primary disabled placeholder col-6" aria-disabled="true" style="border-radius: 50px;"></a>
+              <a class="btn btn-primary in-dev-placeholder-btn" aria-disabled="false" style="border-radius: 50px;">Подробнее</a>
             </div>
           </div>
 
           <div class="card app-card h-100 mx-auto">
             <div class="card-body text-center">
-              <h5 class="card-title text-black text-center">Разработка</h5>
+              <h5 class="card-title text-black text-center">В разработке</h5>
               <p class="placeholder-glow placeholder-more-apps">
-                <span class="placeholder col-4"></span>
-                <span class="placeholder col-4"></span>
-                <span class="placeholder col-3"></span>
-                <span class="placeholder col-2"></span>
-                <span class="placeholder col-3"></span>
-                <span class="placeholder col-6"></span>
-                <span class="placeholder col-6"></span>
-                <span class="placeholder col-2"></span>
-                <span class="placeholder col-2"></span>
-                <span class="placeholder col-2"></span>
-                <span class="placeholder col-2"></span>
-                <span class="placeholder col-4"></span>
+                <span class="placeholder col-4 in-dev-placeholder"></span>
+                <span class="placeholder col-4 in-dev-placeholder"></span>
+                <span class="placeholder col-3 in-dev-placeholder"></span>
+                <span class="placeholder col-2 in-dev-placeholder"></span>
+                <span class="placeholder col-3 in-dev-placeholder"></span>
+                <span class="placeholder col-6 in-dev-placeholder"></span>
+                <span class="placeholder col-6 in-dev-placeholder"></span>
+                <span class="placeholder col-2 in-dev-placeholder"></span>
+                <span class="placeholder col-2 in-dev-placeholder"></span>
+                <span class="placeholder col-2 in-dev-placeholder"></span>
+                <span class="placeholder col-2 in-dev-placeholder"></span>
+                <span class="placeholder col-4 in-dev-placeholder"></span>
               </p>
-              <a class="btn btn-primary disabled placeholder col-6" aria-disabled="true" style="border-radius: 50px;"></a>
+              <a class="btn btn-primary in-dev-placeholder-btn" aria-disabled="false" style="border-radius: 50px;">Подробнее</a>
             </div>
           </div>
 
           <div class="card app-card h-100 mx-auto">
             <div class="card-body text-center">
-              <h5 class="card-title text-black text-center">Разработка</h5>
+              <h5 class="card-title text-black text-center">В разработке</h5>
               <p class="placeholder-glow placeholder-more-apps">
-                <span class="placeholder col-4"></span>
-                <span class="placeholder col-4"></span>
-                <span class="placeholder col-3"></span>
-                <span class="placeholder col-2"></span>
-                <span class="placeholder col-3"></span>
-                <span class="placeholder col-6"></span>
-                <span class="placeholder col-6"></span>
-                <span class="placeholder col-2"></span>
-                <span class="placeholder col-2"></span>
-                <span class="placeholder col-2"></span>
-                <span class="placeholder col-2"></span>
-                <span class="placeholder col-4"></span>
+                <span class="placeholder col-4 in-dev-placeholder"></span>
+                <span class="placeholder col-4 in-dev-placeholder"></span>
+                <span class="placeholder col-3 in-dev-placeholder"></span>
+                <span class="placeholder col-2 in-dev-placeholder"></span>
+                <span class="placeholder col-3 in-dev-placeholder"></span>
+                <span class="placeholder col-6 in-dev-placeholder"></span>
+                <span class="placeholder col-6 in-dev-placeholder"></span>
+                <span class="placeholder col-2 in-dev-placeholder"></span>
+                <span class="placeholder col-2 in-dev-placeholder"></span>
+                <span class="placeholder col-2 in-dev-placeholder"></span>
+                <span class="placeholder col-2 in-dev-placeholder"></span>
+                <span class="placeholder col-4 in-dev-placeholder"></span>
               </p>
-              <a class="btn btn-primary disabled placeholder col-6" aria-disabled="true" style="border-radius: 50px;"></a>
+              <a class="btn btn-primary in-dev-placeholder-btn" aria-disabled="false" style="border-radius: 50px;">Подробнее</a>
             </div>
           </div>
 
@@ -203,71 +227,93 @@
       </div>
     </div>
 
-    <div class="frame-8">
-      <div class="container">
+    <div class="frame-8" id="f8">
+      <div class="container-fluid newseller-bg">
 
+        <canvas id="confetti-canvas"></canvas>
+
+        <div class="container newseller">
+          <div id="subsForm" class="container-fluid row row-cols-1 row-cols-md-2 g-0 mx-auto">
+            
+            <div class="col">
+              <h1 class="ns-title">Получать уведомления об обновлениях.</h1>
+            </div>
+
+            <div class="col">
+              <p class="ns-p">Мы будем присылать электронные письма о добавлении новых функций.</p>
+              <div class="form">
+                <label for="email-form" class="form-label">Адрес электронной почты</label>
+                <input type="email" class="email-form" placeholder="me@example.com" id="email-form" placeholder="name@example.com" name="email" required autocomplete="email">
+                <p id="emailError" class="email-error">Адрес электронный почты недействителен!</p>
+                <button type="submit" id="confetti email-btn" class="btn btn-primary black-btn email-btn" onclick="getAndCheckEmail()">Подписаться</button>
+              </div>
+            </div>
+          </div>
+
+          <div id="afterSubsForm" class="after-subs-form">
+            <h1 class="ns-title">Вы подписаны!</h1>
+            <p class="ns-p">Теперь мы будем присылать Вам электронные письма о новых функциях. Вы в любой момент можете отписаться.</p>
+          </div>
+        </div>
       </div>
     </div>
 
   </main>
 
-  <footer>
+  <footer id="footer">
     <div class="container bottom-line">
       <div class="row row-cols-1 row-cols-md-5 g-4 ">
         <div class="col">
           <h3 class="ftr-jmp-list-h">Приложение</h3>
-          <ul class="navbar-nav">
+          <ul class="navbar-nav footer-nav">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#">Главная</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Обзор</a>
+              <a class="nav-link" href="#f1">Обзор</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Безопасность</a>
+              <a class="nav-link" href="#f2">Безопасность</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Политика конфиденциальности</a>
+              <a class="nav-link" href="#footer">Политика конфиденциальности</a>
             </li>
           </ul>
         </div>
         <div class="col">
           <h3 class="ftr-jmp-list-h">Поддержка</h3>
-          <ul class="navbar-nav">
+          <ul class="navbar-nav footer-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Часто задаваемые вопросы</a>
+              <a class="nav-link disabled" aria-current="page" href="#">Часто задаваемые вопросы</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Руководство</a>
+              <a class="nav-link disabled" href="#">Руководство</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Сообщить о проблеме</a>
+              <a class="nav-link disabled" href="#">Сообщить о проблеме</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Продам стринги ношеные</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Программа бета-тестирования</a>
+              <a class="nav-link disabled" href="#">Программа бета-тестирования</a>
             </li>
           </ul>
         </div>
         <div class="col">
           <h3 class="ftr-jmp-list-h">Социальные сети</h3>
-          <ul class="navbar-nav">
+          <ul class="navbar-nav footer-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Telegram</a>
+              <a class="nav-link" aria-current="page" href="https://t.me/helize/">Telegram</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">ВКонтакте</a>
+              <a class="nav-link disabled" href="#">ВКонтакте</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Instagram</a>
+              <a class="nav-link disabled" href="#">Instagram</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Twitter</a>
+              <a class="nav-link disabled" href="#">Twitter</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Facebook</a>
+              <a class="nav-link disabled" href="#">Facebook</a>
             </li>
           </ul>
         </div>
@@ -276,11 +322,11 @@
     <div class="container copyright-block">
       <p class="copyright">Copyright © 2023 MyDoc. All rights reserved.</p>
       <div class=" copyright">
-        <a class="nav-link copyright copyright-eula copyright-eula-first" href="#">Условия использования</a>
-        <p class="nav-link copyright copyright-eula copyright-eula-first br-c-p">•</p>
-        <a class="nav-link copyright copyright-eula copyright-eula-first" href="#">Политика конфиденциальности</a>
-        <p class="nav-link copyright copyright-eula copyright-eula-first br-c-p">•</p>
-        <a class="nav-link copyright copyright-eula copyright-eula-first reg-selector icon-link icon-link-hover" href="#">
+        <a class="nav-link disabled copyright copyright-eula copyright-eula-first" href="#">Условия использования</a>
+        <p class="nav-link disabled copyright copyright-eula copyright-eula-first br-c-p">•</p>
+        <a class="nav-link disabled copyright copyright-eula copyright-eula-first" href="#">Политика конфиденциальности</a>
+        <p class="nav-link disabled copyright copyright-eula copyright-eula-first br-c-p">•</p>
+        <a class="nav-link disabled copyright copyright-eula copyright-eula-first reg-selector icon-link icon-link-hover" href="#">
           Россия
           <svg class="bi" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
         </a>
@@ -290,6 +336,12 @@
 
   <!-- Bootstrap JavaScript Libraries -->
   <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Additional Libraries -->
+  <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
+
+  <!-- Custom JavaScript -->
+  <script src="js/script.js"></script>
 </body>
 
 </html>
